# biblio-search

./: .env.example  LICENSE  pyproject.toml
configs/: language_screen_time.yaml
src/biblio_agent_bot/: agents.py  cli.py  config.py  embeddings.py  json_tools.py  llm.py  models.py  report.py  sources.py
