[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "biblio-agent-bot"
version = "0.1.0"
description = "Agentic bibliographic review bot for health research projects."
requires-python = ">=3.11"
authors = [{ name = "Tania Duran" }]
dependencies = [
  "biopython>=1.84",
  "google-genai>=1.0.0",
  "habanero>=1.2.6",
  "httpx>=0.27.2",
  "langchain-core>=0.3.0",
  "langgraph>=0.2.0",
  "orjson>=3.10.7",
  "pandas>=2.2.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "pyyaml>=6.0.2",
  "rapidfuzz>=3.9.6",
  "rich>=13.8.0",
  "tenacity>=8.5.0",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "ruff>=0.6.4",
]

[project.scripts]
biblio-agent = "biblio_agent_bot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/biblio_agent_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"
